# back

./: .bumpversion.cfg  .gitignore  Makefile  Mekafile.txt  READEME.md  README.md  deploy.sh  gitignore  manage.py  pyproject.toml  requirements.txt  rollback.sh
clinica/: admin.py  urls.py
clinica/migrations/: 0001_initial.py
clinica/models/: atestado_medico.py  classe_exame_medico.py  dados_vitais.py  grupo_exame_medico.py  guia_transferencia.py  indicacao_medica.py  medico_internamento.py  paciente.py  pedido_exame_medico.py  prescricao.py  prescricao_medica_hora.py  receita_medica.py  relatorio_medico.py  resultado_exame_medico.py
clinica/serializers/: alergia_corrente.py  paciente.py  receita_medica.py  seguradora.py
clinicaCopy/: __init__.py  admin.py  sidebar.py
clinicaCopy/models/: __init__.py  alergia_corrente.py  cardex.py  consulta.py  diario_clinico_internamento.py  doenca_corrente.py  exame_medico.py  historico_clinico_internamento.py  internamento.py  item_receita.py  local_internamento.py  medicacao_corrente.py  medicamento.py  paciente.py  parametro_resultado_exame_medico.py  seguradora.py  tipo_exame_medico.py
clinicaCopy/serializers/: pedido_exame_medico.py  relatorio_medico.py
clinicaCopy/views/: alergia_corrente.py  paciente.py  pedidoexamemedico.py  receita_medica.py  seguradora.py
rh/: admin.py  apps.py  sidebar.py
rh/migrations/: 0001_initial.py  0002_funcionariocargo.py  (+1 more)
saas/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
saude/: __init__.py  admin.py  apps.py  sidebar.py
stock/: __init__.py  admin.py  apps.py  sidebar.py
(+61 files in other folders)
